# daiun-salary

./: .gitignore  .test-config  CLAUDE.md  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml  migrate_test.sh  test_and_deploy.sh
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: cap-catalog-extract.yml  deploy.yml
docs/: bug_1039_missing_170min.md  改善基準告示_トラック運転者.md
migrations/: 001_initial.sql  002_masters.sql  003_operations.sql  004_upload_history.sql  005_daily_work_hours.sql  006_rls.sql  007_daily_work_hours_late_night.sql  008_event_classifications.sql  009_daily_work_segments.sql  010_drive_cargo_minutes.sql  011_api_tokens.sql  012_multi_tenant.sql  013_scrape_history.sql  014_upload_operation_month.sql  015_overlap_minutes.sql  016_has_kudgivt.sql  017_csv_split_done.sql  018_ot_late_night.sql  019_operation_aggregates.sql  020_daily_work_hours_start_time.sql  021_rls_remaining.sql  022_fix_tenant_members_rls.sql  023_rls_sqlx_migrations.sql  024_fix_tenant_members_rls.sql  025_add_service_role_policies.sql
plans/: compare_mod_refactor.md  dtako-data-management.md  greedy-coalescing-spring.md  kudgivt-work-segments.md  snug-gliding-micali.md  websocket-progress.md
plans/completed/: api-tokens-gateway.md  compare_mod_refactor.md  compiled-humming-phoenix.md  date-filtering.md  (+1 more)
scripts/: csv_compare_test.sh  init_local_db.sql
src/: lib.rs  main.rs
test_data/: CLAUDE.md  拘束時間管理表 (3).csv  拘束時間管理表.csv  拘束時間管理表_202602-1018-1021-1026.csv  拘束時間管理表_202602-1021-1026.csv  拘束時間管理表_202602-1029-1032-1036-1037.csv  拘束時間管理表_202602-all.csv
(+37 files in other folders)
