[package]
name = "daiun-salary"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
tower = "0.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken = "9"
sha2 = "0.10"
# JWT claims / 検証の SoT (ippoan/rust-alc-api#410 の手動コピー集約)
alc-auth-jwt = { git = "https://github.com/ippoan/rust-alc-api", branch = "main" }
thiserror = "2"
async-trait = "0.1"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
csv = "1"
zip = "2"
encoding_rs = "0.8"
futures = "0.3"
tokio-stream = "0.1"
printpdf = "0.8"
base64 = "0.22"

[[bin]]
name = "daiun-salary"
path = "src/main.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"
